[package]
name = "kv"
version = "0.1.0"
authors = ["sarbjot-14 <sarbjot_14@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
rust-crypto = "^0.2"
